refactor code working

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,8 @@
 <!-- adding the header files -->
 <%-include("partials/header")%>
 
-<h1><%= postHeading %></h1>
-<p><%= postContent %></p>
+<h1><%= title %></h1>
+<p><%= content %></p>
 
 <!-- adding the footer files -->
 <%-include("partials/footer")%>
