--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,10 +5,10 @@
     <p><%=homeText%></p>
 
     <% posts.forEach(function(post) { %>
-        <h1><%= post.title.substring(0, 100) %></h1>
+        <h1><%= post.title.substring(0, 500) %></h1>
         <p>
             <%= post.content.substring(0, 100) + "... " %>
-            <a href="/posts/<%=post.title%>">Read More</a>
+            <a href="/posts/<%=post._id%>">Read More</a>
         </p>
     <% }); %>
     
